--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@faker-js/faker": "^9.0.2",
     "@types/loadable__component": "5.13.4",
     "@types/react": "18.2.19",
     "@types/react-dom": "^18.3.0",
