--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@radix-ui/themes": "^3.1.3",
     "axios": "^1.7.2",
     "classnames": "2.3.2",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "1.3.0",
     "react-router-dom": "6.12.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
