--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-helmet-async": "1.3.0",
     "react-router-dom": "6.12.0",
     "react-toastify": "^10.0.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
