--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "6.12.0",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0",
+    "yup-phone-lite": "^2.0.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
